<resources>
    <string name="app_name">Águas do Mundo</string>

    <!-- Menu -->
    <string name="title_home">Início</string>
    <string name="title_dashboard">Analisar Água</string>
    <string name="title_notifications">Minhas análises</string>
    <string name="analisar_aqu_fero">Analisar aquífero</string>
    <string name="pesquisar_local">Pesquisar local</string>
    <string name="title_activity_questionario">Questionário</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Fotos! -->
    <string name="sair_da_c_mera">Sair da câmera</string>
    <string name="tirar_foto_de_aqu_fero">Tirar foto de aquífero</string>
    <string name="foto_principal_da_galeria">Foto principal da galeria</string>
    <string name="foto">Foto</string>
    <string name="imagem_selecionada_anteriormente">Imagem selecionada anteriormente</string>

    <!-- Permissão! -->
    <string name="permitir">Permitir</string>
    <string name="permissao_fotos">Permissao para capturar fotos negada.</string>
    <string name="galeria_negada">Permissão para acessar a galeria negada.</string>
    <string name="permissao_salvar">Permissão para salvar fotos negadas.</string>
    <string name="permissao_localizacao">Permissão para acessar localização negada.</string>

    <!-- Perguntas! -->
    <string name="pergunta">Pergunta</string>
    <string name="pergunta_os_peixes_est_o_na_superf_cie_da_gua">Os peixes estão na superfície da água?</string>
    <string name="pergunta_qu_o_transparente_est_a_agua">Quão transparente está a agua?</string>
    <string name="pergunta_a_gua_est_grossa">A água está dura?</string>
    <string name="pergunta_os_peixes_est_o_com_apar_ncia_ap_tica">Os peixes estão com aparência apática?</string>
    <string name="pergunta_presenca_de_algas_e_plantas_filamentosas">Há a presença de algas filamentosas e plantas aquáticas na água?</string>

    <!-- Respostas! -->
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="pouco">Pouco</string>
    <string name="normal">Normal</string>
    <string name="muito">Muito</string>
    <string name="analisar_com_seguintes_dados">Analisar aquíferos com os seguintes dados?</string>
    <string name="nao_aplica">Não se aplica</string>
    <string name="selecione_uma_foto">Selecione uma foto</string>
    <string name="processando">Processando</string>
    <string name="erro_localizacao">Ocorreu um erro durante a aquisição de sua localização, tente novamente.</string>
    <string name="erro_envio_imagem">Houve um erro durante o envio da imagem, deseja tentar novamente?</string>
    <string name="erro_envio">Erro durante envio</string>

    <!-- Ajuda! -->
    <string name="dureza_ajuda">Uma água é considerada "dura" quando contém valores significativos de sais e "macia" quando os contém em baixa quantidade.</string>
    <string name="dureza_medir">Se sabão ou pasta de dentes fizerem pouca espuma na água, então a água é "dura".</string>
    <string name="superficie_ajuda">Quando os peixes estão na superfície, isto pode ser um indício de que os níveis de oxigênio estão insuficientes.</string>
    <string name="peixe_apatico_ajuda">Peixes com aparência apática podem indicar variação do pH da água.</string>
    <string name="oxigenio">Oxigênio</string>
    <string name="dureza">Dureza</string>
    <string name="ph_variante">pH Variante</string>
    <string name="condicoes_ideais">Condições ideais</string>
    <string name="algas">Algas </string>

    <!-- Como resolver problemas -->
    <string name="oxigenio_1">Não alimentar os peixes.</string>
    <string name="oxigenio_2">Se a transparência estiver alta, verificar alcalinidade e adubar o viveiro.</string>
    <string name="oxigenio_3">Se a transparência estiver baixa ou os últimos dias foram nublados, suspender alimentação e renovar a água do viveiro.</string>
    <string name="oxigenio_4">Em pisciculturas com sistemas intensivos, é ncessário utilizar aeradores para aumentar a concentração de oxigênio na água.</string>
    <string name="ph_1">Reduzir a quantidade de alimento ou suspender a alimentação até a correção do pH.</string>
    <string name="recomendacoes">VER RECOMENDAÇÕES</string>
    <string name="verde">Verdes: </string>
    <string name="marrom">Marrom/Vermelhas:</string>
    <string name="residuos">Resíduos acumulados! Ver recomendações</string>
    <string name="app_intro">Introdução</string>
    <string name="foto_do_aqu_fero">Foto do aquífero</string>
    <string name="turbidez">Turbidez: </string>
    <string name="recomenda_es">Recomendações</string>
    <string name="camaroes">Ideal para camarões</string>
    <string name="peixes">Ideal para peixes</string>
</resources>
